# LogReader

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Jenkinsfile  LogReader.sln  README.md  directory_reader.cpp  directory_reader.hpp  filesystem.cpp  filesystem.hpp  log_data.hpp  logreader.cpp  logreader.hpp  main.cpp  utils.hpp
LogReader/: LogReader.vcxproj  main.cpp
commands/: base_command.hpp  command_parser.cpp  command_parser.hpp  filter_command.cpp  filter_command.hpp  save_command.cpp  save_command.hpp
